--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Development Seed <dev@developmentseed.org> (https://developmentseed.org)",
   "license": "MIT",
+  "engines": {
+    "node": "6.x"
+  },
   "dependencies": {
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
