--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,9 @@ services:
       context: .
     image: 'moz-datapipeline'
     env_file: .env
+    entrypoint: /bin/bash
     volumes:
-      - '.:/home/geolambda/work'
+      - '.:/home/moz/work'
 
   pipeline:
     image: moz-datapipeline
