Use node 8 for new version of osrm

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Development Seed <dev@developmentseed.org> (https://developmentseed.org)",
   "license": "MIT",
   "engines": {
-    "node": "6.x"
+    "node": "8.x"
   },
   "dependencies": {
     "@turf/bbox": "^5.1.5",
@@ -32,7 +32,7 @@
     "lodash.camelcase": "^4.3.0",
     "node-cleanup": "^2.1.2",
     "osm2obj": "^3.0.0",
-    "osrm": "^5.15.2",
+    "osrm": "5.16.4",
     "rbush": "^2.0.2",
     "through2": "^2.0.3"
   },
