Set env variables for EAUL script

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ AWS_BUCKET='bucket name here'
 AWS_ACCESS_KEY_ID='code here'
 AWS_SECRET_ACCESS_KEY='secret here'
 ROOT_DIR=$(pwd)/scripts/eaul
-WAY_IDS=21926,22672
+TOTAL_JOBS='optional total number of jobs'
+JOB_ID='optional job_id, number between 1 and TOTAL_JOBS'
